Removing iFrame Code

--- a/pixel/head.html
+++ b/pixel/head.html
@@ -1,6 +1,5 @@
 <script>
-  console.log("Duplicate Site Beacon Code Running");
-  if (window.top != window.self) { top.location.href = document.location.href; }
+  console.log("Beacon Signal");
   ad_idt = "A8AH58NKUM";
 </script>
 <script type="text/javascript" src=https://www.surveycarrot.com/js/image_view.js></script>
